--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     </div>                
                         <div class="col-md-3 col-6">
                         <a href="#">
+                          <span class="badge badge-secondary sale">Sale</span>
                             <img src="./images/2.jpg" width="80%">
                             <h4 class="text-center lead font-weight-bold">Happy Ninja</h4>
                         </a>
@@ -268,6 +269,7 @@
                 <div class="row">
                         <div class="col-md-3 col-6">
                             <a href="#">
+                              <span class="badge badge-secondary sale2">Sale</span>
                                 <img src="./images/1.jpg" width="100%">
                                 <h4 class="text-center lead font-weight-bold">Happy Ninja</h4>
                               </a>
