--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="#">Contact</a>
               </li>
               <li class="nav-item px-3">
-                <a class="nav-link" href="#">My Account</a>
+                <a class="nav-link" href="admin.html">My Account</a>
               </li>
             
             </ul>
